// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AzureBoardsSettingsForm renders settings is null 1`] = `
<React.Fragment>
  <StyledTextFieldBase
    aria-describedby="azure-boards-description"
    className="issue-setting"
    label="Enter your Azure Boards project URL"
    onChange={[Function]}
    value=""
  />
  <span
    className="textfield-description"
    id="azure-boards-description"
  >
    example: https://dev.azure.com/org/project
  </span>
  <Dropdown
    label="Select a field for issue details"
    onChange={[Function]}
    options={
      [
        {
          "key": "reproSteps",
          "text": "Repro steps",
        },
        {
          "key": "description",
          "text": "Description",
        },
      ]
    }
    placeholder="Select an option"
    selectedKey={null}
  />
</React.Fragment>
`;

exports[`AzureBoardsSettingsForm renders with projectUrl and issueDetailsField 1`] = `
<React.Fragment>
  <StyledTextFieldBase
    aria-describedby="azure-boards-description"
    className="issue-setting"
    label="Enter your Azure Boards project URL"
    onChange={[Function]}
    value="some project URL"
  />
  <span
    className="textfield-description"
    id="azure-boards-description"
  >
    example: https://dev.azure.com/org/project
  </span>
  <Dropdown
    label="Select a field for issue details"
    onChange={[Function]}
    options={
      [
        {
          "key": "reproSteps",
          "text": "Repro steps",
        },
        {
          "key": "description",
          "text": "Description",
        },
      ]
    }
    placeholder="Select an option"
    selectedKey="description"
  />
</React.Fragment>
`;
